--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
-    "lint": "./node_modules/.bin/eslint src --ignore-path .gitignore"
+    "lint": "./node_modules/.bin/eslint ./ --ignore-path .gitignore"
   },
   "dependencies": {
     "next": "latest",
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
