--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "learn",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next",
@@ -16,12 +17,13 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.3",
+    "@next/eslint-plugin-next": "^12.0.3",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
-    "eslint": "^8.2.0",
+    "eslint": "<8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
