--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "./node_modules/.bin/eslint ./ --ignore-path .gitignore"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
